# medea-jason

./: .clippy.toml  .dockerignore  .editorconfig  .env  .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  Makefile.backup  README.md  Vagrantfile  build.rs  dart.lib  docker-compose.coturn.yml  docker-compose.medea.yml  sadasasdasd.patch  test  webdriver.json
.cargo/: config  config.toml
.github/workflows/: ci.yml
_dev/: config.toml
charts/: index.yaml  medea-demo-0.5.5.tgz  medea-demo-0.6.0.tgz
crates/medea-macro/: CHANGELOG.md  Cargo.toml  README.md
crates/medea-macro/src/: caused.rs  dart_bridge.rs  dart_codegen.rs  dispatchable.rs  enum_delegate.rs  extern_dart.rs  lib.rs  watchers.rs
crates/medea-macro/tests/: caused.rs
crates/medea-reactive/: CHANGELOG.md  Cargo.toml  README.md
crates/medea-reactive/src/: lib.rs
demo/: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  index.html  minikube.vals.yaml  package.json  review.vals.yaml  staging.vals.yaml
demo/chart/medea-demo/: Chart.yaml  values.yaml
e2e/: .env  Cargo.toml  docker-compose.host.yml  docker-compose.yml  docker-compose__.yml  index.html
e2e-demo/: .gitignore  index.html  package-lock.json  package.json  video-call.html  webpack.config.js
e2e-demo/js/: index.js
e2e/src/: lib.rs
e2e/src/browser/: client.rs  js.rs  mod.rs
e2e/src/browser/mock/: media_devices.rs  mod.rs  websocket.rs
e2e/src/object/: connection.rs  connections_store.rs  jason.rs  local_track.rs  mod.rs  remote_track.rs  room.rs  tracks_store.rs
e2e/tests/: conf.rs  control.rs  main.rs
e2e/tests/features/: apply.feature  create_endpoint.feature  delete_endpoint.feature  disable_remote_media.feature  enable_remote_media.feature  get_user_media.feature  local_tracks_create.feature  media_direction.feature  media_disable.feature  media_mute.feature  monit.feature  on_join.feature  on_leave.feature  on_new_connection_fires.feature  on_state_change_fires.feature  remote_connection_close.feature  room_close.feature  room_join.feature  state_synchronization.feature
e2e/tests/steps/: connection.rs  control_api.rs  media_state.rs  mod.rs  monit.rs  room.rs  track.rs  websocket.rs
e2e/tests/world/: member.rs  mod.rs
flutter/: .editorconfig  .gitignore  .pubignore  CHANGELOG.md  Makefile  README.md  analysis_options.yaml  build.yaml  dockerfile  pubspec.yaml
flutter/android/: .gitignore  build.gradle  gradle.properties
flutter/assets/: .gitignore  .pubignore
flutter/assets/pkg/: medea_jason.d.ts  medea_jason.js  medea_jason_bg.wasm  medea_jason_bg.wasm.d.ts  package.json
flutter/example/: analysis_options.yaml  log  pubspec.yaml
flutter/ios/: .gitignore  .pubignore  medea_jason.podspec
flutter/lib/: jason.dart  medea_jason.dart
flutter/linux/: .pubignore  CMakeLists.txt  medea_jason_plugin.cc  medea_jason_plugin_private.h
flutter/macos/: medea_jason.podspec
flutter/windows/: .gitignore  CMakeLists.txt  jason_plugin.cpp  medea_jason_plugin.cpp  medea_jason_plugin.h  medea_jason_plugin_c_api.cpp
mock/control-api/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
mock/control-api/src/: client.rs  lib.rs  main.rs
mock/control-api/src/api/: endpoint.rs  member.rs  mod.rs  room.rs  ws.rs
mock/control-api/src/callback/: mod.rs  server.rs
proto/client-api/: CHANGELOG.md  Cargo.toml  README.md
proto/client-api/src/: lib.rs  state.rs  stats.rs
proto/control-api/: CHANGELOG.md  Cargo.toml  README.md  build.rs
proto/control-api-mock/: CHANGELOG.md  Cargo.toml  README.md
proto/control-api-mock/src/: callback.rs  endpoint.rs  lib.rs  member.rs  room.rs
proto/control-api/src/: callback.rs  lib.rs
proto/control-api/src/channel/: client.rs  mod.rs  server.rs
proto/control-api/src/control/: member.rs  mod.rs  room.rs
proto/control-api/src/control/endpoint/: mod.rs  web_rtc_play.rs  web_rtc_publish.rs
proto/control-api/src/direct/: client.rs  mod.rs  server.rs
proto/control-api/src/grpc/: api.proto  api.rs  callback.proto  callback.rs  client.rs  mod.rs  server.rs
proto/control-api/src/grpc/conversions/: api.rs  callback.rs  mod.rs
proto/control-api/src/grpc/convert/: api.rs  callback.rs  mod.rs
proto/medea-control-api-mock-proto/: Cargo.toml
src/: api_api_g.io.rs  api_api_g.rs  audio_track_constraints_api_g.io.rs  audio_track_constraints_api_g.rs  cast_stuff_api_g.io.rs  cast_stuff_api_g.rs  connection.rs  connection_handle_api_g.io.rs  connection_handle_api_g.rs  device_video_track_constraints_api_g.io.rs  device_video_track_constraints_api_g.rs  display_video_track_constraints_api_g.io.rs  display_video_track_constraints_api_g.rs  jason.rs  jason_api.rs  jason_api_g.io.rs  jason_api_g.rs  lib.rs  local_media_track_api_g.io.rs  local_media_track_api_g.rs  media_device_info_api_g.io.rs  media_device_info_api_g.rs  media_display_info_api_g.io.rs  media_display_info_api_g.rs  media_manager_handle_api_g.io.rs  media_manager_handle_api_g.rs  media_stream_settings_api_g.io.rs  media_stream_settings_api_g.rs  reconnect_handle_api_g.io.rs  reconnect_handle_api_g.rs  remote_media_track_api_g.io.rs  remote_media_track_api_g.rs  room.rs  room_close_reason_api_g.io.rs  room_close_reason_api_g.rs  room_handle_api_g.io.rs  room_handle_api_g.rs
src/api/: err.rs  mod.rs  shared.rs
src/api/dart/: api.rs  (+38 more)
src/media/: constraints.rs  manager.rs  mod.rs
src/peer/: mod.rs  repo.rs  stream_update_criteria.rs  tracks_request.rs
src/platform/: callback.rs  codec_capability.rs  mod.rs  peer_connection.rs  rtc_stats.rs  transceiver.rs  transceiver_direction.rs  transport.rs
src/rpc/: backoff_delayer.rs  heartbeat.rs  mod.rs  reconnect_handle.rs  rpc_session.rs
src/utils/: component.rs  errors.rs  mod.rs  resettable_delay.rs
tests/: web.rs
tests/connection/: mod.rs
tests/jason/: mod.rs
tests/media/: constraints.rs  manager.rs  mod.rs  track.rs
tests/peer/: mod.rs
tests/room/: connection.rs  mod.rs  room.rs
tests/rpc/: heartbeat.rs  mod.rs  reconnect_handle.rs  rpc_session.rs  websocket.rs
windows_test_staff/: Vagrantfile  run_test.ps1
(+449 files in other folders)
