[package]
name = "medea-jason"
version = "0.5.1-dev"
edition = "2021"
rust-version = "1.75"
description = "Client library for Medea media server."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "MPL-2.0"
documentation = "https://docs.rs/medea-jason"
homepage = "https://github.com/instrumentisto/medea-jason"
repository = "https://github.com/instrumentisto/medea-jason"
readme = "README.md"
keywords = ["medea", "jason", "webrtc", "client", "browser"]
categories = ["multimedia", "api-bindings", "web-programming", "wasm"]
include = ["/src/", "/build.rs", "/CHANGELOG.md", "/LICENSE.md"]

[workspace]
members = [
    "crates/medea-macro",
    "crates/medea-reactive",
    "mock/control-api",
    "proto/client-api",
    "proto/control-api",
    "e2e",
]

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[profile.release]
lto = "fat"

[features]
default = ["console_error_panic_hook"]
dart-codegen = ["medea-macro/dart-codegen"]
mockable = ["mockall"]

[dependencies]
async-recursion = "1.1"
async-trait = "0.1"
backoff = { version = "0.4", features = ["futures"] }
bitflags = "2.6"
derivative = "2.2"
derive_more = { version = "1.0", features = ["as_ref", "debug", "deref", "display", "from", "into", "mul"] }
futures = "0.3"
log = "0.4"
medea-client-api-proto = { version = "0.6.1-dev", path = "proto/client-api" }
medea-macro = { version = "0.3", path = "crates/medea-macro" }
medea-reactive = { version = "0.1", path = "crates/medea-reactive" }
mockall = { version = "0.13", optional = true }
sealed = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracerr = "0.3"
url = "2.5"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[target.'cfg(any(target_os = "ios", target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
simple_logger = "5.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
dart-sys = "4.1"
flutter_rust_bridge = { version = "=1.82.4", default-features = false }
libc = "0.2"

[target.'cfg(target_family = "wasm")'.dependencies]
backoff = { version = "0.4", features = ["wasm-bindgen"] }
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = { path = "/media/alexlapa/drive2/AndroidStudioProjects/wasm-bindgen/crates/js-sys" }
wasm-bindgen = { path = "/media/alexlapa/drive2/AndroidStudioProjects/wasm-bindgen" }
wasm-bindgen-futures = { path = "/media/alexlapa/drive2/AndroidStudioProjects/wasm-bindgen/crates/futures" }
wasm-logger = "0.2"
talc = { path = "/media/alexlapa/drive2/CLionProjects3/talc/talc", features = ["lock_api", "counters"], default-features = false }
wasm-tracing-allocator = "0.1.1"
#talc = { version = "4.4", features = ["lock_api"], default-features = false }
[target.'cfg(target_family = "wasm")'.dependencies.web-sys]
    path = "/media/alexlapa/drive2/AndroidStudioProjects/wasm-bindgen/crates/web-sys"
    features = [
        "console",
        "ConstrainBooleanParameters",
        "ConstrainDomStringParameters",
        "ConstrainDoubleRange",
        "CloseEvent",
        "DisplayMediaStreamConstraints",
        "Event", "EventTarget",
        "MediaDevices","MediaDeviceInfo", "MediaDeviceKind",
        "MediaTrackConstraints", "MediaTrackSettings",
        "MediaStream", "MediaStreamConstraints",
        "MediaStreamTrack", "MediaStreamTrackState",
        "MessageEvent",
        "Navigator",
        "RtcBundlePolicy",
        "RtcConfiguration",
        "RtcIceCandidate", "RtcIceCandidateInit",
        "RtcIceConnectionState",
        "RtcIceServer",
        "RtcIceTransportPolicy",
        "RtcOfferOptions",
        "RtcPeerConnection", "RtcPeerConnectionIceEvent",
#        "RtcPeerConnectionIceErrorEvent",
        "RtcPeerConnectionState",
        "RtcRtpCapabilities",
        "RtcRtpCodecParameters",
        "RtcRtpEncodingParameters",
        "RtcRtpParameters",
        "RtcRtpReceiver", "RtcRtpSender",
        "RtcRtpTransceiver", "RtcRtpTransceiverDirection",
        "RtcRtpTransceiverInit",
        "RtcSdpType",
        "RtcSessionDescription", "RtcSessionDescriptionInit",
        "RtcStats", "RtcStatsReport",
        "RtcTrackEvent",
        "WebSocket", "Window",
    ]

[build-dependencies]
cc = "1.1"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }
wasm-bindgen-test = { path = "/media/alexlapa/drive2/AndroidStudioProjects/wasm-bindgen/crates/test" }

[patch.crates-io]
web-sys = { path = "/media/alexlapa/drive2/AndroidStudioProjects/wasm-bindgen/crates/web-sys" }
js-sys = { path = "/media/alexlapa/drive2/AndroidStudioProjects/wasm-bindgen/crates/js-sys" }
wasm-bindgen = { path = "/media/alexlapa/drive2/AndroidStudioProjects/wasm-bindgen" }
wasm-bindgen-shared = { path = "/media/alexlapa/drive2/AndroidStudioProjects/wasm-bindgen/crates/shared" }

