[package]
name = "medea-jason"
version = "0.10.0"
edition = "2024"
rust-version = "1.85"
description = "Client library for Medea media server."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "MPL-2.0"
documentation = "https://docs.rs/medea-jason"
homepage = "https://github.com/instrumentisto/medea-jason"
repository = "https://github.com/instrumentisto/medea-jason"
readme = "README.md"
keywords = ["medea", "jason", "webrtc", "client", "browser"]
categories = ["multimedia", "api-bindings", "web-programming", "wasm"]
include = ["/src/", "/build.rs", "/CHANGELOG.md", "/LICENSE.md"]

# TODO: Try remove once rustwasm/wasm-pack#1441 is resolved:
#       https://github.com/rustwasm/wasm-pack/issues/1441#issuecomment-2886461752
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(disabled)", "cfg(frb_expand)"] }

[profile.release]
lto = "fat"

[features]
default = ["console_error_panic_hook", "talc"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
dart-codegen = ["medea-macro/dart-codegen"]
mockable = ["dep:mockall"]
talc = ["dep:talc"]

[dependencies]
async-recursion = "1.1"
async-trait = "0.1"
backoff = { version = "0.4", features = ["futures"] }
bitflags = "2.8"
derivative = "2.2"
derive_more = { version = "2.0", features = ["as_ref", "debug", "deref", "display", "from", "into", "mul"] }
# Move this to [target.'cfg(not(target_family = "wasm"))'.dependencies] as soon
# as auto_upgrade will be able to look up for it there.
flutter_rust_bridge = { version = "=2.10.0", features = ["anyhow", "dart-opaque", "rust-async"], default-features = false }
futures = "0.3"
log = "0.4"
medea-client-api-proto = { version = "0.9", path = "proto/client-api" }
medea-macro = { version = "0.3", path = "crates/medea-macro" }
medea-reactive = { version = "0.1", path = "crates/medea-reactive" }
mockall = { version = "0.13", optional = true }
sealed = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracerr = "0.4"
url = "2.5"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"

[target.'cfg(any(target_os = "ios", target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
simple_logger = "5.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
dart-sys = "4.1"
libc = "0.2"
send_wrapper = "0.6"
# TODO: Replace `sync_unsafe_cell` with `std` once the following API is
#       stabilized:
#       https://doc.rust-lang.org/std/cell/struct.SyncUnsafeCell.html
sync-unsafe-cell = "0.1"

[target.'cfg(target_family = "wasm")'.dependencies]
backoff = { version = "0.4", features = ["wasm-bindgen"] }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.3.1", features = ["wasm_js"] }
js-sys = "0.3"
talc = { version = "4.4", features = ["lock_api"], default-features = false, optional = true }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wasm-logger = "0.2"
[target.'cfg(target_family = "wasm")'.dependencies.web-sys]
    version = "0.3.77"
    features = [
        "AnalyserNode",
        "AudioContext", "AudioContextState",
        "console",
        "ConstrainBooleanParameters",
        "ConstrainDomStringParameters",
        "ConstrainDoubleRange",
        "CloseEvent",
        "DisplayMediaStreamConstraints",
        "Event", "EventTarget",
        "MediaDevices","MediaDeviceInfo", "MediaDeviceKind",
        "MediaTrackCapabilities", "MediaTrackConstraints", "MediaTrackSettings",
        "MediaStream", "MediaStreamConstraints",
        "MediaStreamAudioSourceNode",
        "MediaStreamTrack", "MediaStreamTrackState",
        "MessageEvent",
        "Navigator",
        "RtcBundlePolicy",
        "RtcConfiguration",
        "RtcIceCandidate", "RtcIceCandidateInit",
        "RtcIceConnectionState",
        "RtcIceServer",
        "RtcIceTransportPolicy",
        "RtcOfferOptions",
        "RtcPeerConnection",
        "RtcPeerConnectionIceEvent", "RtcPeerConnectionIceErrorEvent",
        "RtcPeerConnectionState",
        "RtcRtpCapabilities",
        "RtcRtpCodecCapability", "RtcRtpCodecParameters",
        "RtcRtpEncodingParameters",
        "RtcRtpParameters",
        "RtcRtpReceiver", "RtcRtpSender",
        "RtcRtpTransceiver", "RtcRtpTransceiverDirection",
        "RtcRtpTransceiverInit",
        "RtcSdpType",
        "RtcSessionDescription", "RtcSessionDescriptionInit",
        "RtcStats", "RtcStatsReport",
        "RtcTrackEvent",
        "WebSocket", "Window",
    ]

[build-dependencies]
cc = "1.1"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }
wasm-bindgen-test = "0.3"

[workspace]
members = [
    "crates/medea-macro",
    "crates/medea-reactive",
    "mock/control-api",
    "proto/client-api",
    "proto/control-api",
    "e2e",
]
