[package]
name = "medea-e2e"
version = "0.0.0"
edition = "2021"
rust-version = "1.58"
description = "E2E tests for Medea media server."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
publish = false

[dependencies]
derive_more = "0.99"
fantoccini = "0.18"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }

async-recursion = "1.0"
async-trait = "0.1"
clap = "3.0"
cucumber = "0.12"
medea-control-api-mock = { path = "../mock/control-api" }
once_cell = "1.9"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "e2e"
path = "tests/main.rs"
harness = false  # Allows Cucumber to print output instead of libtest.
