[package]
name = "medea-e2e"
version = "0.0.0"
edition = "2021"
rust-version = "1.62"
description = "E2E tests for Medea media server."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
publish = false

[dependencies]
async-recursion = "1.0"
cucumber = { version = "0.15", features = ["libtest"] }
derive_more = "0.99"
fantoccini = { version = "0.19", features = ["rustls-tls"], default-features = false }
futures = "0.3"
medea-control-api-mock = { path = "../mock/control-api" }
once_cell = "1.12"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.0", features = ["v4"] }

[[test]]
name = "e2e"
path = "tests/main.rs"
harness = false  # Allows Cucumber to print output instead of libtest.
