[package]
name = "medea-e2e"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
description = "E2E tests for Medea media server."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
publish = false

[features]
default = ["tests"]
# Crates used in `tests/` are gated behind this feature instead of
# `dev-dependencies` to be able to run these tests in workspaces of external
# crates.
tests = [
    "dep:async-recursion",
    "dep:cucumber",
    "dep:medea-control-api-mock",
    "dep:reqwest",
    "derive_more/debug",
    "tokio/macros", "tokio/rt-multi-thread",
]

[dependencies]
async-recursion = { version = "1.0", optional = true }
cucumber = { version = "0.21", features = ["libtest"], optional = true }
derive_more = { version = "2.0", features = ["display", "error", "from"] }
fantoccini = { version = "0.22", features = ["rustls-tls"], default-features = false }
futures = "0.3"
medea-control-api-mock = { path = "../mock/control-api", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt"] }
uuid = { version = "1.0", features = ["v4"] }

[[test]]
name = "e2e"
path = "tests/main.rs"
required-features = ["tests"]
harness = false  # Allows Cucumber to print output instead of libtest.
