[package]
name = "medea-macro"
version = "0.3.0"
edition = "2021"
rust-version = "1.81"
description = "Internal macros and codegen for Medea media server project."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "BlueOak-1.0.0"
documentation = "https://docs.rs/medea-macro"
homepage = "https://github.com/instrumentisto/medea-jason/tree/master/crates/medea-macro"
repository = "https://github.com/instrumentisto/medea-jason"
readme = "README.md"
keywords = ["medea", "macro", "derive", "codegen"]
categories = ["development-tools::build-utils"]
include = ["/src/", "/CHANGELOG.md", "/LICENSE.md"]

[lib]
proc-macro = true

[features]
dart-codegen = []

[dependencies]
Inflector = "0.11"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
synstructure = "0.13"

[dev-dependencies]
async-trait = "0.1"
medea-jason = { path = "../../" }
