[package]
name = "medea-control-api-mock"
version = "0.2.1-dev"
edition = "2021"
rust-version = "1.62"
description = "RESTful mock server for Medea's Control API."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "BlueOak-1.0.0"
homepage = "https://github.com/instrumentisto/medea-jason/tree/master/mock/control-api"
repository = "https://github.com/instrumentisto/medea-jason"
readme = "README.md"
publish = false

[dependencies]
actix = "0.13"
actix-cors = "0.6"
actix-web = "4.0"
actix-web-actors = "4.1"
clap = { version = "4.0", features = ["derive", "wrap_help"] }
derive_more = "0.99"
dotenv = "0.15"
humantime-serde = "1.0"
medea-control-api-proto = { version = "0.10.0-dev", path = "../../proto/control-api", features = ["grpc", "client"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.5"
slog-async = "2.5"
slog-envlogger = "2.2"
slog-scope = "4.3"
slog-stdlog = "4.0"
slog-term = "2.5"
tonic = "0.10"
