[package]
name = "medea-control-api-mock"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
description = "RESTful mock server for Medea's Control API."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "BlueOak-1.0.0"
homepage = "https://github.com/instrumentisto/medea-jason/tree/master/mock/control-api"
repository = "https://github.com/instrumentisto/medea-jason"
readme = "README.md"
publish = false

[dependencies]
actix = "0.13"
actix-cors = "0.7"
actix-web = "4.0"
actix-web-actors = "4.1"
clap = { version = "4.0", features = ["derive", "wrap_help"] }
derive_more = { version = "2.0", features = ["as_ref", "display", "from", "into"] }
dotenv = "0.15"
humantime-serde = "1.0"
medea-control-api-proto = { version = "0.16", path = "../../proto/control-api", features = ["grpc", "client"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.14"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
