[package]
name = "medea-client-api-proto"
version = "0.4.0-dev"
edition = "2021"
rust-version = "1.60"
description = "Client API protocol implementation for Medea media server."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "BlueOak-1.0.0"
documentation = "https://docs.rs/medea-client-api-proto"
homepage = "https://github.com/instrumentisto/medea-jason/tree/master/proto/client-api"
repository = "https://github.com/instrumentisto/medea-jason"
readme = "README.md"
keywords = ["medea", "client-api", "signalling", "webrtc"]
categories = ["api-bindings", "web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["client"]
client = ["dep:async-trait"]
server = []
extended-stats = []

[dependencies]
async-trait = { version = "0.1.34", optional = true }
derive_more = "0.99"
medea-macro = { version = "0.3.0-dev", path = "../../crates/medea-macro" }
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.4"
