[package]
name = "medea-control-api-mock-proto"
version = "0.0.1"
edition = "2018"
resolver = "2"
description = "Protocol of mock server for Medea's Control API."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "BlueOak-1.0.0"
documentation = "https://docs.rs/medea-control-api-mock-proto"
homepage = "https://github.com/instrumentisto/medea-jason/tree/master/proto/control-api-mock"
repository = "https://github.com/instrumentisto/medea-jason/tree/master/proto/control-api-mock"
readme = "README.md"
publish = false

[dependencies]
derive_more = "0.99"
humantime-serde = "1.0"
serde = { version = "1.0", features = ["derive"] }
smart-default = "0.6"
