[package]
name = "medea-control-api-proto"
version = "0.8.0-dev"
edition = "2021"
rust-version = "1.60"
description = "Control API protocol implementation for Medea media server."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "BlueOak-1.0.0"
documentation = "https://docs.rs/medea-control-api-proto"
homepage = "https://github.com/instrumentisto/medea-jason/tree/master/proto/control-api"
repository = "https://github.com/instrumentisto/medea-jason"
readme = "README.md"
keywords = ["medea", "grpc", "control-api"]
categories = ["api-bindings", "network-programming"]

[features]
grpc = ["dep:prost", "dep:prost-types", "dep:tonic", "dep:tonic-build", "dep:url"]

[dependencies]
async-trait = "0.1.34"
derive_more = { version = "0.99.17", features = ["display", "error", "from", "into"], default-features = false }
prost = { version = "0.10", optional = true }
prost-types = { version = "0.10", optional = true }
rand = "0.8"
smart-default = "0.6"
time = "0.3.9"
tonic = { version = "0.7", optional = true }
url = { version = "2.2", optional = true }

[build-dependencies]
tonic-build = { version = "0.7", optional = true }
