[package]
name = "medea-control-api-proto"
version = "0.9.0"
edition = "2021"
rust-version = "1.62"
description = "Control API protocol implementation for Medea media server."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "BlueOak-1.0.0"
documentation = "https://docs.rs/medea-control-api-proto"
homepage = "https://github.com/instrumentisto/medea-jason/tree/master/proto/control-api"
repository = "https://github.com/instrumentisto/medea-jason"
readme = "README.md"
keywords = ["medea", "grpc", "control-api"]
categories = ["api-bindings", "network-programming"]
include = ["/src/", "/build.rs", "/CHANGELOG.md", "/LICENSE.md"]

[features]
client = []
server = []
direct = ["dep:futures"]
grpc = ["dep:prost", "dep:prost-types", "dep:tonic", "dep:tonic-build", "time/formatting", "time/parsing"]
serde = ["dep:serde", "dep:humantime-serde", "url/serde"]
client-api = ["dep:medea-client-api-proto"]

[dependencies]
async-trait = "0.1.34"
derive_more = { version = "0.99.17", features = ["as_ref", "display", "error", "from", "from_str", "into"], default-features = false }
futures = { version = "0.3.21", optional = true }
humantime-serde = { version = "1.1", optional = true }
medea-client-api-proto = { version = "0.5", path = "../client-api", optional = true }
prost = { version = "0.11", optional = true }
prost-types = { version = "0.11", optional = true }
rand = "0.8"
ref-cast = "1.0.7"
serde = { version = "1.0.103", features = ["derive"], optional = true }
time = "0.3.9"
tonic = { version = "0.9", optional = true }
url = "2.2"

[build-dependencies]
tonic-build = { version = "0.9", optional = true }

[dev-dependencies]
serde_yaml = "0.9"
